--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,3 @@
 ACLOCAL_AMFLAGS = -I m4
 
-noinst_HEADERS = \
-		ch1/BulletOpenGLApplication.h \
-		ch1/FreeGLUTCallbacks.h	
-
-bin_PROGRAMS = \
-		ch1
-
-ch1_SOURCES = \
-		ch1/BulletOpenGLApplication.cpp \
-		ch1/main.cpp
+SUBDIRS = src
