--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,19 +1,22 @@
 ACLOCAL_AMFLAGS = -I m4
 
 noinst_HEADERS = \
-		FreeGLUTCallbacks.h	\
 		Ch1/BulletOpenGLApplication.h \
 		Ch2.1/BulletOpenGLApplication.h
 
 bin_PROGRAMS = \
-		ch1 ch2.1
+		ch1 ch2_1
 
+ch1_CPPFLAGS=
 ch1_SOURCES = \
 		Ch1/BulletOpenGLApplication.cpp \
-		main.cpp
+		Ch1/FreeGLUTCallbacks.h	\
+		Ch1/main.cpp
 
+ch2_1_CPPFLAGS=
 ch2_1_SOURCES = \
 		Ch2.1/BulletOpenGLApplication.cpp \
-		main.cpp
+		Ch2.1/FreeGLUTCallbacks.h	\
+		Ch2.1/main.cpp
 
 		
