* Examples from 2th chapter completed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,10 +2,10 @@ ACLOCAL_AMFLAGS = -I m4
 
 noinst_HEADERS = \
 		Ch1/BulletOpenGLApplication.h \
-		Ch2.1/BulletOpenGLApplication.h
+		Ch2/BulletOpenGLApplication.h
 
 bin_PROGRAMS = \
-		ch1 ch2_1
+		ch1 ch2
 
 ch1_CPPFLAGS=
 ch1_SOURCES = \
@@ -13,10 +13,10 @@ ch1_SOURCES = \
 		Ch1/FreeGLUTCallbacks.h	\
 		Ch1/main.cpp
 
-ch2_1_CPPFLAGS=
-ch2_1_SOURCES = \
-		Ch2.1/BulletOpenGLApplication.cpp \
-		Ch2.1/FreeGLUTCallbacks.h	\
-		Ch2.1/main.cpp
+ch2_CPPFLAGS=
+ch2_SOURCES = \
+		Ch2/BulletOpenGLApplication.cpp \
+		Ch2/FreeGLUTCallbacks.h	\
+		Ch2/main.cpp
 
 		
