--- a/configure.ac
+++ b/configure.ac
@@ -133,7 +133,7 @@ AC_CHECK_FUNCS([floor gettimeofday pow sqrt])
 AC_CONFIG_FILES([
 		Makefile
 		application/Makefile
-		panda3d/Makefile
+		application_p3d/Makefile
 		])
 
 AC_OUTPUT
